# backup_maker_5000

./: .gitignore  Cargo.toml  config.example.json  readme.md
src/: auth.rs  backup.rs  cli.rs  main.rs  upload.rs
