[package]
name = "backup_maker_5000"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
google-cloud-storage = "0.15.0"
uuid = { version = "1.7.0", features = ["serde"] }
flate2 = "1.0.28"
chrono = "0.4.34"
tar = "0.4.40"
walkdir = "2.4.0"
log = "0.4.20"
env_logger = "0.11.2"
